
@startuml src
top to bottom direction
hide circle
skinparam classAttributeIconSize 0

package domain {
  package service {
    class StudiumPlanungService {
      +get_semester(studium: Studium): Semester[]
      +get_studium_statistik(studium: Studium, datum: date): StudiumStatistik
      +kurse_fertig(studium: Studium): Kurs[]
      +kurse_offen(studium: Studium, datum: date): Kurs[]
      +kurse_soll(studium: Studium, datum: date): Kurs[]
      +naechste_pruefungen(studium: Studium, datum: date, max_kurse: int): Kurs[]
      +anzahl_ects(studium: Studium): int
      +anzahl_ects_soll(studium: Studium, datum: date): int
      +anzahl_ects_fertig(studium: Studium): int
      +durchschnittsnote(studium: Studium): float | None
      +benoetigte_durchschnittsnote(studium: Studium): float | None
    }
  }

  package entity {
    class Studium {
      +name: str
      +beginn: datetime.date
      +ziel_note: float
      +ziel_monate: int
      +ende: date
      +anzahl_tage: int
      +anzahl_kurse: int
      +vergangene_tage(datum: date): int
      +verbleibende_tage(datum: date): int
      +fuege_kurs_hinzu(kurs_id: str, name: str, ects: int, schwere: KursSchwere, noten: list, beginn: date | None, ende: date | None): None
      +aktualisiere_kurs(kurs_id: str, name: str, ects: int, schwere: KursSchwere, noten: list, beginn: date | None, ende: date | None): None
      +verschiebe_kurs(kurs_id: int, hoch: bool): None
    }
    class Kurs {
      +id: str
      +name: str
      +ects: int
      +noten: float[]
      +beginn: date | None
      +ende: date | None
      +anzahl_tage: int | None
      +note: None | float
      +kann_note_hinzufuegen: bool
      +ist_fertig: bool
      +faellig_in_tagen(datum: date): int
      +berechne_status(datum: date): KursStatus
      +ist_aktiv(datum: date): bool
      +ist_faellig(datum: date): bool
    }

    class Semester {
      +no: int
      +beginn: date
      +ende: date
      +anzahl_tage: int
    }

    class StudiumStatistik {
      +anzahl_kurse: int
      +anzahl_kurse_soll: int
      +anzahl_kurse_ist: int
      +anzahl_ects: float
      +anzahl_ects_soll: float
      +anzahl_ects_ist: float
      +durchnitt_note: float
      +benoetigt_note: float
    }

    package enums{
      enum KursSchwere {
        SEHR_LEICHT
        LEICHT
        MITTEL
        SCHWER
        SEHR_SCHWER
      }

      enum KursStatus {
        UNGEPLANT
        OFFEN
        AKTIV
        FAELLIG
        FERTIG
      }
    }
  }
}

'Service
StudiumPlanungService "1 " --> "1 " Studium
StudiumPlanungService "1 " --> "0..* " Kurs
StudiumPlanungService "1 " --> "1..* " Semester
StudiumPlanungService "1 " --> "1 " StudiumStatistik
'Entity
Studium "1 " *-- "0..* " Kurs
Studium "1 " -- "0..* " KursSchwere
Kurs "1 " o-- "1 " KursSchwere
Kurs "1 " o-- "1 " KursStatus

service -[hidden]d->entity

@enduml